# manage-conf

./: .editorconfig  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.circleci/: config.yml
manage_conf/: __init__.py
manageconf/: __init__.py  exceptions.py
tests/: datasets.py  test_manage_conf.py  test_manageconf.py
