[tool.poetry]
name = "manage-conf"
version = "0.1.1"
description = "Builds a config object based on environment variables, settings files and (optional) parameters stored in AWS System Manager Parameter Store."
repository = "https://github.com/sam-atkins/manage-conf"
license = "MIT"
readme = "README.md"
authors = ["Sam Atkins <samatkins@outlook.com>"]

keywords = ["configuration", "env", "AWS", "12factor"]

[tool.poetry.dependencies]
python = "^3.6"
anyconfig = "^0.9.8"
boto3 = "^1.9"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
flake8 = "^3.7"
pytest = "^3.0"
pytest-cov = "^2.6"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  |  env
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
